# dorcas

./: BUILD  MODULE.bazel  dorcas.sh  go.mod  go.sum  main.go  orchestrion.yml
scripts/: build.sh  orchestrion.sh
tools/orchestrion/: defs.bzl  extensions.bzl  repository.bzl  transition.bzl
