bazel_dep(
    name = "rules_go",
    version = "0.50.1",
)
local_path_override(
    module_name = "rules_go",
    path = "../rules_go",
)

bazel_dep(
    name = "gazelle",
    version = "0.43.0",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_datadog_orchestrion",
)
