bazel_dep(
    name = "rules_go",
    version = "0.50.1",
)
local_path_override(
    module_name = "rules_go",
    path = "../rules_go",
)

bazel_dep(
    name = "gazelle",
    version = "0.43.0",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Build and configure orchestrion for rules_go
orchestrion = use_extension("@rules_go//go:extensions.bzl", "orchestrion")
orchestrion.from_source(version = "v1.5.0")
